--- a/vignettes/ds-helper-main-vignette.Rmd
+++ b/vignettes/ds-helper-main-vignette.Rmd
@@ -88,16 +88,16 @@ ds.colnames("data")
 
 ```
 ## $alspac
-## [1] "id"                 "age"                "sex"                "ethnicity"          "father_socialclass" "mother_education"  
-## [7] "weight"            
+## [1] "id"                 "age"                "sex"                "ethnicity"          "father_socialclass"
+## [6] "mother_education"   "weight"            
 ## 
 ## $bcg
-## [1] "id"                 "age"                "sex"                "ethnicity"          "father_socialclass" "mother_education"  
-## [7] "weight"            
+## [1] "id"                 "age"                "sex"                "ethnicity"          "father_socialclass"
+## [6] "mother_education"   "weight"            
 ## 
 ## $bib
-## [1] "id"                 "age"                "sex"                "ethnicity"          "father_socialclass" "mother_education"  
-## [7] "weight"
+## [1] "id"                 "age"                "sex"                "ethnicity"          "father_socialclass"
+## [6] "mother_education"   "weight"
 ```
 
 # Data manipulation functions
@@ -121,13 +121,16 @@ ds.colnames("data")
 
 ```
 ## $alspac
-## [1] "id"               "age"              "sex"              "mother_education" "weight"           "race"             "paternal_class"  
+## [1] "id"               "age"              "sex"              "mother_education" "weight"           "race"            
+## [7] "paternal_class"  
 ## 
 ## $bcg
-## [1] "id"               "age"              "sex"              "mother_education" "weight"           "race"             "paternal_class"  
+## [1] "id"               "age"              "sex"              "mother_education" "weight"           "race"            
+## [7] "paternal_class"  
 ## 
 ## $bib
-## [1] "id"               "age"              "sex"              "mother_education" "weight"           "race"             "paternal_class"
+## [1] "id"               "age"              "sex"              "mother_education" "weight"           "race"            
+## [7] "paternal_class"
 ```
 
 ## Removing columns with dh.dropCols()
@@ -218,19 +221,25 @@ dh.makeStrata(
   new_obj = "height_data")
 ```
 
+```
+## Error in `left_join()`:
+## ! Join columns in `x` must be present in the data.
+## ✖ Problem with `cohort` and `suffix`.
+```
+
 ```r
 ds.colnames("height_data")
 ```
 
 ```
 ## $alspac
-## [1] "id"          "tmp_obj"     "weight.4_6"  "weight.7_10" "age.4_6"     "age.7_10"   
+## [1] "id"      "tmp_obj"
 ## 
 ## $bcg
-## [1] "id"         "tmp_obj"    "weight.4_6" "age.4_6"   
+## [1] "id"      "tmp_obj"
 ## 
 ## $bib
-## [1] "id"          "tmp_obj"     "weight.4_6"  "weight.7_10" "age.4_6"     "age.7_10"
+## [1] "id"      "tmp_obj"
 ```
 
 The created dataset contains 5 variables: the id variable, two variables
@@ -256,13 +265,13 @@ ds.colnames("data")
 
 ```
 ## $alspac
-## [1] "id"          "age"         "sex"         "weight"      "tmp_obj"     "weight.4_6"  "weight.7_10" "age.4_6"     "age.7_10"   
+## [1] "id"      "age"     "sex"     "weight"  "tmp_obj"
 ## 
 ## $bcg
-## [1] "id"         "age"        "sex"        "weight"     "tmp_obj"    "weight.4_6" "age.4_6"   
+## [1] "id"      "age"     "sex"     "weight"  "tmp_obj"
 ## 
 ## $bib
-## [1] "id"          "age"         "sex"         "weight"      "tmp_obj"     "weight.4_6"  "weight.7_10" "age.4_6"     "age.7_10"
+## [1] "id"      "age"     "sex"     "weight"  "tmp_obj"
 ```
 
 ## Transforming continuous variable to interquartile range using dh.makeIQR()
@@ -296,15 +305,13 @@ ds.colnames("data")
 
 ```
 ## $alspac
-##  [1] "id"           "age"          "sex"          "weight"       "tmp_obj"      "weight.4_6"   "weight.7_10"  "age.4_6"     
-##  [9] "age.7_10"     "weight_iqr_s"
+## [1] "id"           "age"          "sex"          "weight"       "tmp_obj"      "weight_iqr_s"
 ## 
 ## $bcg
-## [1] "id"           "age"          "sex"          "weight"       "tmp_obj"      "weight.4_6"   "age.4_6"      "weight_iqr_s"
+## [1] "id"           "age"          "sex"          "weight"       "tmp_obj"      "weight_iqr_s"
 ## 
 ## $bib
-##  [1] "id"           "age"          "sex"          "weight"       "tmp_obj"      "weight.4_6"   "weight.7_10"  "age.4_6"     
-##  [9] "age.7_10"     "weight_iqr_s"
+## [1] "id"           "age"          "sex"          "weight"       "tmp_obj"      "weight_iqr_s"
 ```
 
 
@@ -450,25 +457,26 @@ stats
 ```
 ## $categorical
 ## # A tibble: 0 × 10
-## # ℹ 10 variables: variable <chr>, cohort <chr>, category <chr>, value <dbl>, cohort_n <int>, valid_n <dbl>, missing_n <dbl>,
-## #   perc_valid <dbl>, perc_missing <dbl>, perc_total <dbl>
+## # ℹ 10 variables: variable <chr>, cohort <chr>, category <chr>, value <dbl>, cohort_n <int>, valid_n <dbl>,
+## #   missing_n <dbl>, perc_valid <dbl>, perc_missing <dbl>, perc_total <dbl>
 ## 
 ## $continuous
 ## # A tibble: 12 × 15
-##    variable cohort    mean std.dev perc_5 perc_10 perc_25 perc_50 perc_75 perc_90 perc_95 valid_n cohort_n missing_n missing_perc
-##    <chr>    <chr>    <dbl>   <dbl>  <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>    <dbl>     <dbl>        <dbl>
-##  1 age      alspac    6.2     5.53   0       0.1     0.83    4.52   10.8    13.9    15.7   129681   129681         0            0
-##  2 age      bcg       2.01    1.67   0       0.12    0.5     1.52    3.51    4.53    4.99   12724    12724         0            0
-##  3 age      bib       1.48    1.74   0       0       0.08    0.71    2.11    4.72    4.98   68864    68864         0            0
-##  4 sex      alspac    0.49    0.5    0       0       0       0       1       1       1     129681   129681         0            0
-##  5 sex      bcg       0.48    0.5    0       0       0       0       1       1       1      12724    12724         0            0
-##  6 sex      bib       0.49    0.5    0       0       0       0       1       1       1      68864    68864         0            0
-##  7 weight   alspac   25.3    20.2    3.93    4.56    8.4    18.5    38.5    56.2    65.3   129681   129681         0            0
-##  8 weight   bcg      11.6     5.29   4.12    4.69    6.55   11.7    15.8    18.5    20.0    12724    12724         0            0
-##  9 weight   bib       9.54    5.81   3.28    3.7     4.59    7.52   14.2    18.3    20.3    68864    68864         0            0
-## 10 age      combined  4.41    5.01   0       0.07    0.57    3.1     7.55   10.4    11.6   211269   211269         0            0
-## 11 sex      combined  0.49    0.5    0       0       0       0       1       1       1     211269   211269         0            0
-## 12 weight   combined 19.4    17.9    3.73    4.29    7.05   14.5    29.2    41.6    47.9   211269   211269         0            0
+##    variable cohort    mean std.dev perc_5 perc_10 perc_25 perc_50 perc_75 perc_90 perc_95 valid_n cohort_n missing_n
+##    <chr>    <chr>    <dbl>   <dbl>  <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>    <dbl>     <dbl>
+##  1 age      alspac    6.2     5.53   0       0.1     0.83    4.52   10.8    13.9    15.7   129681   129681         0
+##  2 age      bcg       2.01    1.67   0       0.12    0.5     1.52    3.51    4.53    4.99   12724    12724         0
+##  3 age      bib       1.48    1.74   0       0       0.08    0.71    2.11    4.72    4.98   68864    68864         0
+##  4 sex      alspac    0.49    0.5    0       0       0       0       1       1       1     129681   129681         0
+##  5 sex      bcg       0.48    0.5    0       0       0       0       1       1       1      12724    12724         0
+##  6 sex      bib       0.49    0.5    0       0       0       0       1       1       1      68864    68864         0
+##  7 weight   alspac   25.3    20.2    3.93    4.56    8.4    18.5    38.5    56.2    65.3   129681   129681         0
+##  8 weight   bcg      11.6     5.29   4.12    4.69    6.55   11.7    15.8    18.5    20.0    12724    12724         0
+##  9 weight   bib       9.54    5.81   3.28    3.7     4.59    7.52   14.2    18.3    20.3    68864    68864         0
+## 10 age      combined  4.41    5.01   0       0.07    0.57    3.1     7.55   10.4    11.6   211269   211269         0
+## 11 sex      combined  0.49    0.5    0       0       0       0       1       1       1     211269   211269         0
+## 12 weight   combined 19.4    17.9    3.73    4.29    7.05   14.5    29.2    41.6    47.9   211269   211269         0
+## # ℹ 1 more variable: missing_perc <dbl>
 ```
 
 The output is a list of two tibbles, corresponding to categorical and continuous
@@ -492,6 +500,17 @@ dh.lmTab(
   ci_format  = "separate")
 ```
 
+```
+## Error: Assertion on 'model' failed. function (msg) 
+## msgs <<- c(msgs, msg).
+
+## Error: Assertion on 'model' failed. function () 
+## msgs.
+
+## Error: Assertion on 'model' failed. function () 
+## length(msgs) == 0.
+```
+
 For manuscripts we may want to include confidence intervals in brackets after
 the point estimate. We can specify this with the argument "ci_format":
 
@@ -505,11 +524,14 @@ dh.lmTab(
 ```
 
 ```
-## # A tibble: 2 × 5
-##   variable  est                 se pvalue  n_obs
-##   <chr>     <chr>            <dbl>  <dbl>  <int>
-## 1 intercept 4.36 (4.32,4.39)  0.02      0 211269
-## 2 age       3.4 (3.4,3.41)    0         0 211269
+## Error: Assertion on 'model' failed. function (msg) 
+## msgs <<- c(msgs, msg).
+
+## Error: Assertion on 'model' failed. function () 
+## msgs.
+
+## Error: Assertion on 'model' failed. function () 
+## length(msgs) == 0.
 ```
 
 ## Checking class of data using dh.classDiscrepancy()
@@ -534,19 +556,15 @@ disc
 ```
 
 ```
-## # A tibble: 10 × 5
-##    variable     discrepancy alspac  bcg     bib    
-##    <chr>        <chr>       <chr>   <chr>   <chr>  
-##  1 id           no          numeric numeric numeric
-##  2 age          no          numeric numeric numeric
-##  3 sex          no          numeric numeric numeric
-##  4 weight       no          numeric numeric numeric
-##  5 tmp_obj      no          numeric numeric numeric
-##  6 weight.4_6   no          numeric numeric numeric
-##  7 weight.7_10  yes         numeric NULL    numeric
-##  8 age.4_6      no          numeric numeric numeric
-##  9 age.7_10     yes         numeric NULL    numeric
-## 10 weight_iqr_s no          numeric numeric numeric
+## # A tibble: 6 × 5
+##   variable     discrepancy alspac  bcg     bib    
+##   <chr>        <chr>       <chr>   <chr>   <chr>  
+## 1 id           no          numeric numeric numeric
+## 2 age          no          numeric numeric numeric
+## 3 sex          no          numeric numeric numeric
+## 4 weight       no          numeric numeric numeric
+## 5 tmp_obj      no          numeric numeric numeric
+## 6 weight_iqr_s no          numeric numeric numeric
 ```
 
 ## Checking non-missing data using dh.anyData()
@@ -657,28 +675,28 @@ ds.dim("complete_df")
 
 ```
 ## $`dimensions of data in alspac`
-## [1] 129681     10
+## [1] 129681      6
 ## 
 ## $`dimensions of data in bcg`
-## [1] 12724     8
+## [1] 12724     6
 ## 
 ## $`dimensions of data in bib`
-## [1] 68864    10
+## [1] 68864     6
 ## 
 ## $`dimensions of data in combined studies`
-## [1] 211269     10
+## [1] 211269      6
 ## 
 ## $`dimensions of complete_df in alspac`
-## [1] 129681     10
+## [1] 129681      6
 ## 
 ## $`dimensions of complete_df in bcg`
-## [1] 12724     8
+## [1] 12724     6
 ## 
 ## $`dimensions of complete_df in bib`
-## [1] 68864    10
+## [1] 68864     6
 ## 
 ## $`dimensions of complete_df in combined studies`
-## [1] 211269     10
+## [1] 211269      6
 ```
 
 # Miscellaneous functions
@@ -840,7 +858,7 @@ str(meta_analysed$model)
 ##   ..$ fit.stats   :'data.frame':	5 obs. of  2 variables:
 ##   .. ..$ ML  : num [1:5] -3.27 24.21 10.53 8.73 22.53
 ##   .. ..$ REML: num [1:5] -2.68 5.36 9.36 6.74 21.36
-##   ..$ data        :<environment: 0x1624fe920> 
+##   ..$ data        :<environment: 0x139378300> 
 ##   ..$ formula.yi  : NULL
 ##   ..$ formula.mods: NULL
 ##   ..$ version     :Classes 'package_version', 'numeric_version'  hidden list of 1
@@ -953,13 +971,13 @@ str(meta_analysed$model)
 ##   ..$ fit.stats   :'data.frame':	5 obs. of  2 variables:
 ##   .. ..$ ML  : num [1:5] 0.14 25.2 3.72 1.92 15.72
 ##   .. ..$ REML: num [1:5] -0.407 0.814 4.814 2.201 16.814
-##   ..$ data        :<environment: 0x162481ce8> 
+##   ..$ data        :<environment: 0x12971ce00> 
 ##   ..$ formula.yi  : NULL
 ##   ..$ formula.mods: NULL
 ##   ..$ version     :Classes 'package_version', 'numeric_version'  hidden list of 1
 ##   .. ..$ : int [1:3] 4 2 0
 ##   ..$ call        : language rma(yi = model$betamatrix.valid[x, ], sei = model$sematrix.valid[x, ], method = "ML")
-##   ..$ time        : num 0.002
+##   ..$ time        : num 0.003
 ##   ..- attr(*, "class")= chr [1:2] "rma.uni" "rma"
 ```
 
@@ -975,6 +993,12 @@ meta_analysed$coefs
 ##   <chr>       <dbl> <dbl>
 ## 1 (Intercept)  4.91 0.415
 ## 2 age          3.14 0.133
+```
+
+Finish by logging out of the demo server
+
+```r
+datashield.logout(conns)
 ```
 
 
